src/objects/datasan__Account_Lookup__c.object
<CustomObject>
    <fields>
        <fullName>datasan__ABN_Field_Name__c</fullName>
        <inlineHelpText>The API Name for ABN field.</inlineHelpText>
        <label>ABN Field Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__ABN__c</fullName>
        <inlineHelpText>The unique Salesforce identifier for the ABN field.</inlineHelpText>
        <label>ABN Field Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Account_Field_Name__c</fullName>
        <inlineHelpText>The API Name for Account field.</inlineHelpText>
        <label>Account Field Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Account__c</fullName>
        <inlineHelpText>The unique Salesforce identifier for the Account field.</inlineHelpText>
        <label>Account Field Id</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Field_Id_Hint__c</fullName>
        <formula>IMAGE(&quot;https://d1c24wnrse4bd3.cloudfront.net/api/sf/1.8/images/FieldIdHint.png&quot;, &quot;Field Id Hint&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The character&apos;s highlighted in red indicate the unique Salesforce identifier for a field.</inlineHelpText>
        <label>Field Id Hint</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Object_Name__c</fullName>
        <label>Object Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Setting__c</fullName>
        <label>Setting</label>
        <referenceTo>datasan__Setting__c</referenceTo>
        <relationshipName>AMA_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Account Lookup</label>
    <nameField>
        <label>Account Lookup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Lookups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>